# chik_rs

./: .gitignore  Cargo.toml  README.md  bump-version.py  mypy.ini  package-lock.json
.github/workflows/: benchmark.yml  build-crate-and-npm.yml  build-crate.yml  build-npm.yml  build-riscv64.yml  build-test.yml  build-wheels.yml
benches/: run-generator.rs
chik-bls/: Cargo.toml
chik-bls/benches/: verify.rs
chik-bls/fuzz/: Cargo.toml
chik-bls/fuzz/fuzz_targets/: blspy-fidelity.rs  derive.rs
chik-bls/src/: mnemonic.rs  public_key.rs  secret_key.rs  signature.rs
chik-client/: Cargo.toml
chik-client/src/: error.rs  peer.rs
chik-protocol/: Cargo.toml
chik-protocol/fuzz/: Cargo.toml
chik-protocol/fuzz/fuzz_targets/: parse-foliage.rs  parse-full-block.rs  parse-header-block.rs  parse-program.rs  parse-tx-info.rs  spend-bundle.rs  streamable.rs
chik-protocol/src/: bytes.rs  coin.rs  fee_estimate.rs  foliage.rs  program.rs
chik-ssl/: Cargo.toml
chik-ssl/src/: lib.rs
chik-tools/: Cargo.toml  parse-analyze-chain.py
chik-tools/src/: visit_spends.rs
chik-wallet/: Cargo.toml
chik-wallet/fuzz/: Cargo.toml
chik-wallet/fuzz/fuzz_targets/: roundtrip.rs
chik-wallet/src/: proof.rs
chik-wallet/src/puzzles/: cat.rs  did.rs  nft.rs  singleton.rs  standard.rs
chik_py_streamable_macro/src/: lib.rs
chik_streamable_macro/src/: lib.rs
clvm-utils/: Cargo.toml
clvm-utils/fuzz/: Cargo.toml
crates/chik-bls/: Cargo.toml
crates/chik-bls/fuzz/: Cargo.toml
crates/chik-bls/fuzz/fuzz_targets/: blspy-fidelity.rs  derive.rs
crates/chik-bls/src/: bls_cache.rs  gtelement.rs  public_key.rs  secret_key.rs  signature.rs
crates/chik-client/: Cargo.toml
crates/chik-client/src/: peer.rs
crates/chik-consensus/: Cargo.toml
crates/chik-consensus/benches/: run-generator.rs
crates/chik-consensus/fuzz/: Cargo.toml
crates/chik-consensus/fuzz/fuzz_targets/: additions-and-removals.rs  deserialize-proof.rs  fast-forward.rs  generator.rs  generator_conditions.rs  merkle-set.rs  parse-cond-args.rs  parse-conditions.rs  parse-spend-id.rs  parse-spend.rs  parse-spends.rs  process-spend.rs  puzzle-coin-solution.rs  puzzle-fingerprint.rs  run-generator.rs  run-puzzle.rs  sanitize-uint.rs  solution-generator.rs
crates/chik-consensus/fuzz/src/: fuzzing_utils.rs
crates/chik-consensus/src/: conditions.rs  fast_forward.rs  merkle_set.rs  merkle_tree.rs  spendbundle_conditions.rs  spendbundle_validation.rs
crates/chik-fuzzing/: Cargo.toml
crates/chik-protocol/: Cargo.toml
crates/chik-protocol/fuzz/: Cargo.toml
crates/chik-protocol/fuzz/fuzz_targets/: parse-header-block.rs  parse-program.rs  spend-bundle.rs  streamable.rs
crates/chik-protocol/src/: bytes.rs  coin.rs  program.rs  spend_bundle.rs
crates/chik-puzzle-types/: Cargo.toml
crates/chik-puzzle-types/fuzz/: Cargo.toml
crates/chik-puzzle-types/fuzz/fuzz_targets/: roundtrip.rs
crates/chik-puzzles/: Cargo.toml
crates/chik-puzzles/fuzz/: Cargo.toml
crates/chik-puzzles/fuzz/fuzz_targets/: roundtrip.rs
crates/chik-puzzles/src/: derive_synthetic.rs
crates/chik-puzzles/src/puzzles/: cat.rs  nft.rs  standard.rs
crates/chik-secp/: Cargo.toml
crates/chik-serde/: Cargo.toml
crates/chik-sha2/: Cargo.toml
crates/chik-ssl/: Cargo.toml
crates/chik-ssl/src/: ca.rs
crates/chik-tools/: Cargo.toml  graph.gnuplot
crates/chik-tools/src/: visit_spends.rs
crates/chik-traits/: Cargo.toml
crates/chik-traits/src/: streamable.rs
crates/chik-wallet/fuzz/: Cargo.toml
crates/chik_py_streamable_macro/: Cargo.toml
crates/chik_py_streamable_macro/src/: lib.rs
crates/chik_streamable_macro/: Cargo.toml
crates/chik_streamable_macro/src/: lib.rs
crates/klvm-derive/: Cargo.toml
crates/klvm-derive/src/: from_klvm.rs  to_klvm.rs
crates/klvm-traits/: Cargo.toml
crates/klvm-traits/fuzz/: Cargo.toml
crates/klvm-traits/fuzz/fuzz_targets/: int_encoding.rs
crates/klvm-traits/src/: lib.rs
crates/klvm-utils/: Cargo.toml
crates/klvm-utils/fuzz/: Cargo.toml
crates/klvm-utils/fuzz/fuzz_targets/: curry.rs  tree-hash.rs
crates/klvm-utils/src/: tree_hash.rs
examples/: streaming-patch.diff
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fast-forward.rs  parse-cond-args.rs  parse-conditions.rs  parse-spend.rs  parse-spends.rs  process-spend.rs  puzzle-coin-solution.rs  run-generator.rs  run-puzzle.rs  sanitize-uint.rs  self-extractor.rs
fuzz/src/: fuzzing_utils.rs
generator-tests/: README.md
klvm-derive/src/: from_klvm.rs  helpers.rs  to_klvm.rs
klvm-traits/: Cargo.toml
klvm-traits/src/: from_klvm.rs  lib.rs  match_byte.rs  to_klvm.rs  wrappers.rs
klvm-utils/: Cargo.toml
klvm-utils/fuzz/: Cargo.toml
klvm-utils/fuzz/fuzz_targets/: curry.rs  tree-hash.rs  uncurry.rs
klvm-utils/src/: curried_program.rs  curry_tree_hash.rs
src/: allocator.rs  fast_forward.rs  generator_rom.rs  lib.rs
tests/: generate-programs.py  merkle_set.py  run-programs.py  run.py  run_gen.py  test-generators.py  test_additions_and_removals.py  test_block_builder.py  test_block_record_fidelity.py  test_blscache.py  test_blspy_fidelity.py  test_coin.py  test_consensus_constants.py  test_fast_forward.py  test_get_puzzle_and_solution.py  test_get_spends_for_block.py  test_merkle_set.py  test_pot_iterations.py  test_program.py  test_program_fidelity.py  test_proof_of_space.py  test_puzzle_fingerprint.py  test_replace.py  test_run_block_generator.py  test_run_puzzle.py  test_spend_bundle.py  test_streamable.py  test_struct_stream.py  test_tree_hash.py  test_validate_klvm_and_signature.py
wasm/: Cargo.toml  README.md
wheel/: Cargo.toml  chik_rs.pyi  generate_type_stubs.py  pyproject.toml
wheel/python/chik_rs/: chik_rs.pyi
wheel/src/: api.rs  compression.rs  run_generator.rs  run_program.rs
