[package]
name = "chik-ssl"
version = "0.2.13"
edition = "2021"
license = "Apache-2.0"
description = "Chik SSL X.509 certificate generator"
authors = ["Brandon Haggstrom <b.haggstrom@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs/chik-ssl/"
repository = "https://github.com/Chik-Network/chik_rs/chik-ssl/"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
rsa = "0.9.2"
rustls = "0.21.2"
thiserror = "1.0.50"
time = "0.3.22"
