[package]
name = "chik-tools"
version = "0.1.16"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Chik blockchain full node"
authors = ["Arvid Norberg <arvid@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs/chik-tools"
repository = "https://github.com/Chik-Network/chik_rs/chik-tools"

[dependencies]
chik-protocol = { version = "=0.2.7", path = "../chik-protocol" }
clvmr = { version = "=0.2.7", features = ["counters"] }
chik = { version = "=0.2.9", path = ".." }
sqlite = "=0.31.0"
clap = { version = "=4.3.9", features = ["derive"] }
zstd = "=0.12.3+zstd.1.5.2"
threadpool = "=1.8.1"
hex = "=0.4.3"

[[bin]]
name = "analyze-chain"
test = false
bench = false

[[bin]]
name = "test-block-generators"
test = false
bench = false

[[bin]]
name = "compress-clvm"
test = false
bench = false
