[package]
name = "chik-tools"
version = "0.4.1"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Chik blockchain full node"
authors = ["Arvid Norberg <arvid@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs/chik-tools"
repository = "https://github.com/Chik-Network/chik_rs/chik-tools"

[dependencies]
chik-protocol = { version = "0.4.1", path = "../chik-protocol" }
chik-traits = { path = "../chik-traits" }
klvm-utils = { path = "../klvm-utils" }
klvm-traits = { version = "=0.3.3", path = "../klvm-traits" }
chik-wallet = { version = "=0.4.1", path = "../chik-wallet" }
chik-bls = { version = "0.4.0", path = "../chik-bls" }
klvmr = { version = "0.4.0", features = ["counters"] }
chik = { version = "0.4.1", path = ".." }
rusqlite = { version = "=0.30.0", features = ["bundled"] }
clap = { version = "=4.3.9", features = ["derive"] }
zstd = "=0.12.3"
threadpool = "=1.8.1"
hex = "=0.4.3"
hex-literal = "=0.4.1"

[lib]
name = "chik_tools"
crate-type = ["rlib"]

[[bin]]
name = "analyze-chain"
test = false
bench = false

[[bin]]
name = "test-block-generators"
test = false
bench = false

[[bin]]
name = "compress-klvm"
test = false
bench = false

[[bin]]
name = "gen-corpus"
test = false
bench = false

[[bin]]
name = "run-spend"
test = false
bench = false

[[bin]]
name = "fast-forward-spend"
test = false
bench = false
