[package]
name = "clvm-utils"
version = "0.2.7"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions for processing clvm programs and structures"
authors = ["Arvid Norberg <arvid@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs/"
repository = "https://github.com/Chik-Network/chik_rs/clvm-utils"

[dependencies]
clvmr = "0.2.7"
