[package]
name = "chik_wasm"
version = "0.9.0"
authors = ["Richard Kiss <him@richardkiss.com>"]
edition = "2021"
license = "Apache-2.0"
description = "Code useful for implementing chik consensus."
homepage = "https://github.com/Chik-Network/chik_rs"
repository = "https://github.com/Chik-Network/chik_rs"
readme = "README.md"

[lib]
name = "chik_wasm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2.92"
