[package]
name = "chik-fuzzing"
version = "0.28.1"
edition = "2021"
license = "Apache-2.0"
description = "Fuzzing tools for Chik Projects on Rust"
authors = ["Jack Nelson <j.nelson@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs"
repository = "https://github.com/Chik-Network/chik_rs"


[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true, features = ["derive"] }
klvmr = { workspace = true, features = ["counters"] }
chik-sha2 = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
