[package]
name = "chik-ssl"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "Chik SSL X.509 certificate generator"
authors = ["Brandon Haggstrom <b.haggstrom@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs"
repository = "https://github.com/Chik-Network/chik_rs"

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
rcgen = { version = "0.11.1", features = ["pem", "x509-parser"] }
rsa = "0.9.5"
thiserror = "1.0.50"
time = "0.3.22"
