[package]
name = "chik-tools"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Chik blockchain full node"
authors = ["Arvid Norberg <arvid@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs"
repository = "https://github.com/Chik-Network/chik_rs"

[dependencies]
chik-protocol = { version = "0.7.0", path = "../chik-protocol" }
chik-traits = { version = "0.7.0", path = "../chik-traits" }
klvm-utils = { version = "0.7.0", path = "../klvm-utils" }
klvm-traits = { version = "0.7.0", path = "../klvm-traits" }
chik-wallet = { version = "0.7.0", path = "../chik-wallet" }
chik-bls = { version = "0.7.0", path = "../chik-bls" }
chik-consensus = { version = "0.7.0", path = "../chik-consensus" }
klvmr = { version = "0.6.0", features = ["counters"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
clap = { version = "4.3.9", features = ["derive"] }
zstd = "0.12.3"
blocking-threadpool = "1.0.1"
hex = "0.4.3"
hex-literal = "0.4.1"

[lib]
name = "chik_tools"
crate-type = ["rlib"]

[[bin]]
name = "analyze-chain"
test = false
bench = false

[[bin]]
name = "test-block-generators"
test = false
bench = false

[[bin]]
name = "compress-klvm"
test = false
bench = false

[[bin]]
name = "gen-corpus"
test = false
bench = false

[[bin]]
name = "run-spend"
test = false
bench = false

[[bin]]
name = "fast-forward-spend"
test = false
bench = false

[[bin]]
name = "optimize-db"
test = false
bench = false

[[bin]]
name = "get-generator"
test = false
bench = false
