[package]
name = "chik-tools"
version = "0.28.2"
edition = "2021"
license = "Apache-2.0"
description = "Utility functions and types used by the Chik blockchain full node"
authors = ["Arvid Norberg <arvid@chiknetwork.com>"]
homepage = "https://github.com/Chik-Network/chik_rs"
repository = "https://github.com/Chik-Network/chik_rs"

[lints]
workspace = true

[dependencies]
chik-protocol = { workspace = true }
chik-traits = { workspace = true }
chik-puzzles = { workspace = true }
klvm-utils = { workspace = true }
klvm-traits = { workspace = true }
chik-puzzle-types = { workspace = true }
chik-bls = { workspace = true }
chik-consensus = { workspace = true }
klvmr = { workspace = true, features = ["counters"] }
rusqlite = { workspace = true, features = ["bundled"] }
clap = { workspace = true, features = ["derive"] }
zstd = { workspace = true }
blocking-threadpool = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
linreg = { workspace = true }
chik-sha2 = { workspace = true }
gnuplot = { workspace = true }

[lib]
name = "chik_tools"
crate-type = ["rlib"]

[[bin]]
name = "analyze-chain"
test = false
bench = false

[[bin]]
name = "test-block-generators"
test = false
bench = false

[[bin]]
name = "compress-klvm"
test = false
bench = false

[[bin]]
name = "gen-corpus"
test = false
bench = false

[[bin]]
name = "run-spend"
test = false
bench = false

[[bin]]
name = "fast-forward-spend"
test = false
bench = false

[[bin]]
name = "optimize-db"
test = false
bench = false

[[bin]]
name = "get-generator"
test = false
bench = false

[[bin]]
name = "validate-blockchain-db"
test = false
bench = false

[[bin]]
name = "rollback-blockchain-db"
test = false
bench = false

[[bin]]
name = "puzzle-hash"
test = false
bench = false
