[package]
name = "klvm-traits-fuzz"
version = "0.21.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { workspace = true }
klvmr = { workspace = true }
klvm-traits = { workspace = true }

[[bin]]
name = "int_encoding"
path = "fuzz_targets/int_encoding.rs"
test = false
doc = false
bench = false
